# EiRT-AscenD-Robotics

./: .gitignore  README.md  box_data.txt  boxes.md  configs.json  init_slaves.sh  run_slaves.sh
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/dronehive/lib/dronehive/: box_node  dummy_confirm  dummy_drone  dynamixel  offboard  slave_node
install/dronehive/share/dronehive/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/dronehive/share/dronehive/launch/: world_row.launch.py  world_scatter.launch.py  world_tower.launch.py
install/dronehive_interfaces/share/dronehive_interfaces/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/dronehive_interfaces/share/dronehive_interfaces/cmake/: dronehive_interfacesConfig.cmake  dronehive_interfaces__rosidl_typesupport_cExport-noconfig.cmake  dronehive_interfaces__rosidl_typesupport_cppExport.cmake  (+6 more)
install/hmi/share/hmi/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/hmi_backend/share/hmi_backend/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/offboard/lib/offboard/: offboard  serv
install/offboard/share/offboard/: package.dsv  package.ps1  package.sh
log/: latest_build
plots/: plot.py
ros2_ws/: .gitignore  launch.master.py  launch.slave.py  preset1.xml  preset2.xml  preset_slave.xml
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/log/: latest_build
ros2_ws/src/: box_data.txt
ros2_ws/src/drone_landing_traj_node/: CMakeLists.txt  package.xml
ros2_ws/src/drone_landing_traj_node/src/: landing_traj_node.py
ros2_ws/src/drone_tracking_node/: CMakeLists.txt  package.xml
ros2_ws/src/drone_tracking_node/src/: drone_pos_pub.py
ros2_ws/src/dronehive/: package.xml  setup.py
ros2_ws/src/dronehive/dronehive/: .null-ls_859760_box_node.py  box_node.py  dummy.py  new_box_responder.py
ros2_ws/src/dronehive_gazebo/: CMakeLists.txt  package.xml
ros2_ws/src/dronehive_gazebo/config/: drone_box_controllers.yaml
ros2_ws/src/dronehive_gazebo/launch/: drone_box_gazebo.launch.py
ros2_ws/src/dronehive_gazebo/scripts/: new_box_responder.py
ros2_ws/src/dronehive_gazebo/urdf/: drone_box.xacro
ros2_ws/src/dronehive_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/dronehive_interfaces/action/: TrackDrone.action
ros2_ws/src/dronehive_interfaces/msg/: BackendCommand.msg  BoxFullStatus.msg  BoxSetupConfirmationMessage.msg  DroneForceLandingMessage.msg  DroneStatusMessage.msg  DroneStopResumeTrajectory.msg  DroneToggleExecutionMessage.msg  GuiAddNewDrone.msg  GuiCommand.msg  OccupancyMessage.msg  PositionMessage.msg  ToggleTrajectory.msg
ros2_ws/src/dronehive_interfaces/srv/: AddRemoveDroneService.srv  BosStatusSlaveUpdateService.srv  BoxBroadcastService.srv  BoxStatusService.srv  DroneLandingService.srv  DroneStatusService.srv  DroneTrajectoryWaypointsService.srv  FirstWaypointService.srv  GetFlightlog.srv  GetFreeBox.srv  OccupancyService.srv  RequestBoxOpenService.srv  RequestDroneLanding.srv  RequestLanding.srv  RequestReturnHome.srv  SlaveBoxInformationService.srv  ToggleTrajectoryExecutionService.srv
ros2_ws/src/hmi/: CMakeLists.txt  package.xml
ros2_ws/src/hmi/include/: ColorListWidget.h  backend_manager.h  box.h  drone.h  flight_plan_dialog.h  flight_preset_create_dialog.h  helper.h  mainwindow.h  master_box.h  new_box_dialog.h  slave_box.h  ui_add_drone.h  ui_box_timeout_dialog.h  ui_flight_dialog.h  ui_flight_preset_create_dialog.h  ui_mainwindow.h  ui_new_box.h  update_system_dialog.h  warehouseframe.h
ros2_ws/src/hmi/install/: local_setup.sh
ros2_ws/src/hmi/install/hmi/share/hmi/: local_setup.dsv  local_setup.sh  package.sh
ros2_ws/src/hmi/log/: latest_build
ros2_ws/src/hmi/maps/: test.json
ros2_ws/src/hmi/presets/: preset_test.xml  preset_test2.xml
ros2_ws/src/hmi/resources/: resources.qrc
ros2_ws/src/hmi/resources/icons/: Get to know your customers.docx  User Research.docx
ros2_ws/src/hmi/src/: ColorListWidget.cpp  add_drone_dialog.cpp  backend_manager.cpp  box.cpp  drone.cpp  flight_plan_dialog.cpp  flight_preset_create_dialog.cpp  main.cpp  mainwindow.cpp  master_box.cpp  new_box_dialog.cpp  slave_box.cpp  warehouseframe.cpp
ros2_ws/src/hmi/src/install/: local_setup.sh  setup.sh
ros2_ws/src/hmi/src/log/: latest_build
ros2_ws/src/hmi/trajectories/: test.xml
ros2_ws/src/hmi/ui/: box_search_timeout_dialog.ui  flight_plan_dialog.ui  flight_preset_or_create_dialog.ui  mainwindow.ui  new_box_pupup.ui  update_system_dialog.ui
ros2_ws/src/hmi_backend/: CMakeLists.txt  package.xml
ros2_ws/src/hmi_backend/include/: app.h
ros2_ws/src/hmi_backend/src/: app.cpp  main.cpp
ros2_ws/src/hmi_backend/src/include/: app.h
ros2_ws/src/offboard/: package.xml  setup.py
ros2_ws/src/offboard/offboard/: offboard.py
src/dronehive/: setup.cfg  setup.py
src/dronehive/dronehive/: offboard.py
src/dronehive/dronehive/master_box/: master.py
src/dronehive/dronehive/rviz/: dronehive_markers.rviz
src/dronehive/dronehive/slave_box/: slave.py
src/dronehive/dronehive/utils/: __init__.py  topics.py
src/dronehive/launch/: world_row.launch.py  world_scatter.launch.py  world_tower.launch.py
src/dronehive_interfaces/msg/: BoxStatusMessage.msg
src/dronehive_interfaces/srv/: DroneLandingService.srv  DroneStartStopService.srv  RequestBoxStatus.srv  SlaveBoxIDsService.srv
src/hmi/: CMakeLists.txt
src/hmi/include/: add_drone_dialog.h  backend_manager.h  box.h  box_timeout_dialog.h  drone.h  ui_flight_preset_create_dialog.h  ui_mainwindow.h  update_system_dialog.h
src/hmi/install/: setup.sh
src/hmi/presets/: preset_test.xml
src/hmi/resources/: resources.qrc
src/hmi/src/: backend_manager.cpp  box_timeout_dialog.cpp  flight_preset_create_dialog.cpp  warehouseframe.cpp
src/hmi/ui/: box_search_timeout_dialog.ui  mainwindow.ui  ui_add_drone.ui
src/hmi_backend/: CMakeLists.txt
src/hmi_backend/include/: app.h
src/hmi_backend/src/: main.cpp
src/scripts/: drone_land.sh  kill_all_drones.sh
(+407 files in other folders)
